--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="C:\Users\nadya\Documents\Coding\PortofolioNana\images\putihbaru.png">
+          <img class="logo" src="https://www.linkpicture.com/q/putihbaru.png">
         </div>
         <a heft="#" class="menu-icon">
           <i class="fas fa-bars"></i>
@@ -41,28 +41,28 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\nadya\Documents\Coding\PortofolioNana\images\1.png">
+              <img src="https://www.linkpicture.com/q/1_39.png">
                <p>ART</p>
             </div>
             <p class="txt-contents">Creation in 2D and 3D. </p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\nadya\Documents\Coding\PortofolioNana\images\2.png">
+              <img src="https://www.linkpicture.com/q/2_21.png">
               <p>MINIATURE</p>
             </div>
             <p class="txt-contents">Artificial forms in three dimensions and small scale.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\nadya\Documents\Coding\PortofolioNana\images\3.png">
+              <img src="https://www.linkpicture.com/q/3_19.png">
               <p>3D MODEL</p>
             </div>
             <p class="txt-contents">Techniques in computer graphics for producing a digital representation of an object in three dimensions.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\nadya\Documents\Coding\PortofolioNana\images\4.png">
+              <img src="https://www.linkpicture.com/q/4_13.png">
               <p>ANIMATION</p>
             </div>
             <p class="txt-contents">Method in which figures are manipulated to appear as moving images.</p>
@@ -82,7 +82,7 @@
     </div>
     <footer>
       <div class="container">
-        <img src="C:\Users\nadya\Documents\Coding\PortofolioNana\images\putihbaru.png">
+        <img src="https://www.linkpicture.com/q/putihbaru.png">
         <p>Learn To Design, Learn To Be Creative.</p>
       </div>
     </footer>
