--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+j<html>
   <head>
     <meta charset="utf-8">
     <title>Cubanana</title>
@@ -41,7 +41,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://www.linkpicture.com/q/1_39.png">
+              <img src="https://www.linkpicture.com/q/1614005242017.png">
                <p>ART</p>
             </div>
             <p class="txt-contents">Creation in 2D and 3D. </p>
